# Social/docs/swagger.yaml
@@ -306,6 +306,35 @@ paths:
       summary: Creates a Comment
       tags:
       - comments
+  /comments/{commentID}:
+    delete:
+      consumes:
+      - application/json
+      description: Delete a comment by ID
+      parameters:
+      - description: comment ID
+        in: path
+        name: commentID
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "204":
+          description: No Content
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/main.ErrorResponseWrapper'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/main.ErrorResponseWrapper'
+      security:
+      - ApiKeyAuth: []
+      summary: Deletes comment from post
+      tags:
+      - comments
   /posts:
     post:
       consumes:
